added image to load critically

--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
       name="description"
       content="Connecting retailers with suppliers seamlessly."
     />
-
+    <!-- Preload LCP image - MOST IMPORTANT -->
+    <link
+      rel="preload"
+      as="image"
+      href="/src/components/HomePage/HeroSection/images/happy1_800.webp"
+      type="image/webp"
+      media="(min-width: 769px)"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/src/components/HomePage/HeroSection/images/happy1_600.webp"
+      type="image/webp"
+      media="(max-width: 768px)"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="/src/components/HomePage//HeroSection/images/happy1_800.jpg"
+      type="image/jpeg"
+    />
     <title>Gula</title>
     <link href="/src/styles.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
